--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,7 @@ body {
     flex-direction: column;
     width: 1350px;
     height: fit-content;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     margin-top: 20px;
     justify-content: center;
     align-items: center;
@@ -194,7 +194,7 @@ body {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     margin-bottom: 40px;
     width: 1350px;
 }
@@ -225,3 +225,19 @@ button:active {
     color: black;
 }
 
+#model{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    justify-content: center;
+    align-items: center;
+}
+
+#model_imagine{
+    max-width: 100%;
+    max-height: 100%;
+}
