add link between pages

--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,11 @@ body {
 
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
 .group-way{
     display: flex;
     flex-direction: column;
@@ -164,6 +169,7 @@ body {
 
 .pic-way:hover {
     transform: scale(1.2);
+    cursor: pointer;
 }
 
 
