--- a/css/style_for_expl.css
+++ b/css/style_for_expl.css
@@ -19,6 +19,11 @@ body {
 
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
 .logo {
     
     padding-top: 20px;
@@ -155,7 +160,7 @@ body {
 
 .zoom-loupe {
     position: absolute;
-    width: 250px; /* Задайте размер лупы по вашему усмотрению */
+    width: 250px;
     height: 250px;
     border: 2px solid #fff;
     border-radius: 50%;
